# dpflearner

./: CLAUDE.md  README.md  prompt.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/outdist/: __init__.py  base_torch.py  dirichlet.py  losses.py  metrics.py
src/outdist/calibration/: __init__.py  dirichlet.py
src/outdist/cli/: __init__.py  __main__.py  evaluate.py  train.py
src/outdist/configs/: __init__.py  base.py  calibration.py  data.py  model.py  trainer.py
src/outdist/conformal/: __init__.py  base.py  chcds.py
src/outdist/data/: __init__.py  binning.py  datasets.py  transforms.py
src/outdist/ensembles/: __init__.py  average.py  stacked.py
tests/: test_binning_scheme.py  test_calibration.py  test_ckde_model.py  test_cli.py  test_conformal.py  test_consistency_cde_model.py  test_diffusion_model.py  test_dirichlet_utils.py  test_ensemble_trainer.py  test_ensembles_methods.py  test_evaluator.py  test_evidential_model.py  test_flow_cde_model.py  test_gaussian_ls_model.py  test_imm_jump_model.py  test_iqn_model.py  test_kmn_model.py  test_lincde_model.py  test_logger.py  test_logistic_mixture_model.py  test_logistic_regression_model.py  test_losses.py  test_make_dataset.py  test_make_mlp.py  test_mdn_model.py  test_mean_flow_model.py  test_metrics.py  test_mlp_model.py  test_model_registry.py  test_monotone_cdf_model.py  test_ngboost_model.py  test_quantile_rf_model.py  test_rfcde_model.py  test_shortcut_cde_model.py  test_spline_transformer_model.py  test_trainer_binning.py  test_trainer_models.py  test_transformer_model.py  test_transforms.py
(+39 files in other folders)
